feat: completar traducciones en toda la aplicación
- Actualizar AuthForm con traducciones completas para login/register
- Corregir Footer con navegación traducida
- Actualizar WatchlistDetail con todos los textos traducidos
- Agregar claves de traducción faltantes en archivos JSON
- Implementar traducciones para formularios, botones y mensajes
- Corregir spanglish en componentes de autenticación
- Asegurar consistencia terminológica en español

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -1,37 +1,47 @@
 {
   "login": {
     "title": "Sign In",
-    "email": "Email",
-    "password": "Password",
-    "signIn": "Sign In",
-    "signInWithGoogle": "Sign in with Google",
-    "forgotPassword": "Forgot password?",
+    "description": "Enter your credentials to access",
+    "button": "Sign In",
+    "loading": "Signing in...",
     "noAccount": "Don't have an account?",
-    "signUp": "Sign up"
+    "registerLink": "Sign up"
   },
   "register": {
     "title": "Create Account",
+    "description": "Create an account to get started",
+    "button": "Create Account",
+    "loading": "Creating account...",
+    "hasAccount": "Already have an account?",
+    "loginLink": "Sign in"
+  },
+  "fields": {
+    "name": "Name",
     "email": "Email",
     "password": "Password",
-    "confirmPassword": "Confirm Password",
-    "signUp": "Sign Up",
-    "signUpWithGoogle": "Sign up with Google",
-    "hasAccount": "Already have an account?",
-    "signIn": "Sign in"
+    "confirmPassword": "Confirm Password"
+  },
+  "placeholders": {
+    "name": "Your name",
+    "email": "your@email.com",
+    "password": "••••••••",
+    "confirmPassword": "Repeat your password"
   },
   "validation": {
-    "emailRequired": "Email is required",
-    "emailInvalid": "Please enter a valid email",
-    "passwordRequired": "Password is required",
-    "passwordMinLength": "Password must be at least 6 characters",
-    "passwordsMatch": "Passwords must match",
-    "confirmPasswordRequired": "Please confirm your password"
+    "nameRequired": "Name is required",
+    "emailInvalid": "Invalid email",
+    "passwordMin": "Minimum 6 characters",
+    "passwordMismatch": "Passwords don't match"
   },
-  "messages": {
-    "loginSuccess": "Successfully signed in",
-    "loginError": "Failed to sign in. Please check your credentials.",
-    "registerSuccess": "Account created successfully",
-    "registerError": "Failed to create account. Please try again.",
-    "logoutSuccess": "Successfully signed out"
+  "errors": {
+    "googleLogin": "Error signing in with Google"
+  },
+  "google": {
+    "continue": "Continue with Google",
+    "loading": "Signing in with Google..."
+  },
+  "links": {
+    "terms": "Terms",
+    "privacy": "Privacy"
   }
 }
