--- a/public/locales/es/auth.json
+++ b/public/locales/es/auth.json
@@ -1,37 +1,47 @@
 {
   "login": {
     "title": "Iniciar Sesión",
-    "email": "Correo electrónico",
-    "password": "Contraseña",
-    "signIn": "Iniciar sesión",
-    "signInWithGoogle": "Iniciar sesión con Google",
-    "forgotPassword": "¿Olvidaste tu contraseña?",
+    "description": "Ingresa tus credenciales para acceder",
+    "button": "Iniciar Sesión",
+    "loading": "Ingresando...",
     "noAccount": "¿No tienes cuenta?",
-    "signUp": "Regístrate"
+    "registerLink": "Regístrate"
   },
   "register": {
     "title": "Crear Cuenta",
-    "email": "Correo electrónico",
-    "password": "Contraseña",
-    "confirmPassword": "Confirmar contraseña",
-    "signUp": "Registrarse",
-    "signUpWithGoogle": "Registrarse con Google",
+    "description": "Crea una cuenta para comenzar",
+    "button": "Crear Cuenta",
+    "loading": "Creando cuenta...",
     "hasAccount": "¿Ya tienes cuenta?",
-    "signIn": "Iniciar sesión"
+    "loginLink": "Inicia sesión"
+  },
+  "fields": {
+    "name": "Nombre",
+    "email": "Email",
+    "password": "Contraseña",
+    "confirmPassword": "Confirmar Contraseña"
+  },
+  "placeholders": {
+    "name": "Tu nombre",
+    "email": "tu@email.com",
+    "password": "••••••••",
+    "confirmPassword": "Repite tu contraseña"
   },
   "validation": {
-    "emailRequired": "El correo electrónico es obligatorio",
-    "emailInvalid": "Por favor ingresa un correo electrónico válido",
-    "passwordRequired": "La contraseña es obligatoria",
-    "passwordMinLength": "La contraseña debe tener al menos 6 caracteres",
-    "passwordsMatch": "Las contraseñas deben coincidir",
-    "confirmPasswordRequired": "Por favor confirma tu contraseña"
+    "nameRequired": "El nombre es requerido",
+    "emailInvalid": "Email inválido",
+    "passwordMin": "Mínimo 6 caracteres",
+    "passwordMismatch": "Las contraseñas no coinciden"
   },
-  "messages": {
-    "loginSuccess": "Sesión iniciada exitosamente",
-    "loginError": "Error al iniciar sesión. Verifica tus credenciales.",
-    "registerSuccess": "Cuenta creada exitosamente",
-    "registerError": "Error al crear cuenta. Inténtalo de nuevo.",
-    "logoutSuccess": "Sesión cerrada exitosamente"
+  "errors": {
+    "googleLogin": "Error al iniciar sesión con Google"
+  },
+  "google": {
+    "continue": "Continuar con Google",
+    "loading": "Iniciando con Google..."
+  },
+  "links": {
+    "terms": "Términos",
+    "privacy": "Privacidad"
   }
 }
