--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -38,5 +38,12 @@
     "confirm": "Confirmar",
     "yes": "Sí",
     "no": "No"
+  },
+  "footer": {
+    "home": "Inicio"
+  },
+  "links": {
+    "terms": "Términos",
+    "privacy": "Privacidad"
   }
 }
