fix: corregir notificaciones y botones con traducciones
- Arreglar botón 'Cerrar' usando t('common.close')
- Traducir todas las notificaciones/toasts en CreateWatchlistDialog
- Traducir notificaciones en WatchlistItem
- Agregar claves de traducción para mensajes y errores
- Implementar interpolación de variables en mensajes
- Corregir spanglish en todas las notificaciones
- Asegurar consistencia en mensajes de éxito y error

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -37,7 +37,8 @@
     "success": "Success",
     "confirm": "Confirm",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "close": "Close"
   },
   "footer": {
     "home": "Home"
