--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -37,7 +37,8 @@
     "success": "Éxito",
     "confirm": "Confirmar",
     "yes": "Sí",
-    "no": "No"
+    "no": "No",
+    "close": "Cerrar"
   },
   "footer": {
     "home": "Inicio"
