--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -46,5 +46,9 @@
   "links": {
     "terms": "Terms",
     "privacy": "Privacy"
+  },
+  "notFound": {
+    "message": "Oops! Page not found",
+    "returnHome": "Return to Home"
   }
 }
