--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -46,5 +46,9 @@
   "links": {
     "terms": "Términos",
     "privacy": "Privacidad"
+  },
+  "notFound": {
+    "message": "¡Ups! Página no encontrada",
+    "returnHome": "Volver al Inicio"
   }
 }
