fix: corregir todos los textos hardcodeados restantes
- Traducir toast 'Enlace copiado' en WatchlistDetail
- Corregir diálogo de confirmación de eliminación en WatchlistMovieCard
- Traducir toast 'Película eliminada' y errores relacionados
- Traducir textos hardcodeados en MediaCard (Director, Cast, etc.)
- Agregar todas las claves de traducción faltantes en archivos JSON
- Implementar interpolación para mensajes dinámicos
- Asegurar que todos los componentes usen el contexto reactivo
- Eliminar completamente textos hardcodeados en español e inglés

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -50,5 +50,12 @@
   "notFound": {
     "message": "Oops! Page not found",
     "returnHome": "Return to Home"
+  },
+  "media": {
+    "noOverview": "No overview available.",
+    "watchTrailer": "Watch Trailer",
+    "director": "Director",
+    "cast": "Cast",
+    "notAvailable": "N/A"
   }
 }
