fix: traducir menú de opciones en WatchlistItem
- Corregir botones 'Editar' y 'Eliminar' hardcodeados en menú de opciones
- Traducir diálogo de edición completo (título, descripción, placeholders)
- Traducir botones 'Cancelar', 'Guardar', 'Guardando...'
- Corregir texto 'Creada:' hardcodeado
- Agregar todas las claves de traducción faltantes:
  - buttons.edit, buttons.save, buttons.options
  - edit.title, edit.description, edit.saving
  - list.created, fields.name, fields.description
- Asegurar que menú de opciones funcione correctamente en ambos idiomas

--- a/public/locales/en/watchlists.json
+++ b/public/locales/en/watchlists.json
@@ -72,11 +72,26 @@
   "buttons": {
     "cancel": "Cancel",
     "delete": "Delete",
-    "remove": "Remove"
+    "remove": "Remove",
+    "edit": "Edit",
+    "save": "Save",
+    "options": "Options"
   },
   "remove": {
     "title": "Are you sure?",
     "confirmation": "This action will permanently remove \"{{title}}\" from the list. This action cannot be undone.",
     "removing": "Removing..."
+  },
+  "edit": {
+    "title": "Edit watchlist",
+    "description": "Edit the name or description of the list.",
+    "saving": "Saving..."
+  },
+  "list": {
+    "created": "Created"
+  },
+  "fields": {
+    "name": "Name",
+    "description": "Description (optional)"
   }
 }
