fix: corregir traducciones faltantes
- Corregir 'list.myWatchlists' por 'list.title' en Watchlists.tsx
- Agregar clave 'list.title' en archivos de traducción (en: My Watchlists, es: Mis Listas)
- Corregir 'common.close' por 'buttons.close' en WatchlistDetail.tsx
- Agregar clave 'buttons.close' en archivos de traducción (en: Close, es: Cerrar)
- Asegurar que todas las claves de traducción estén correctamente mapeadas

--- a/public/locales/en/watchlists.json
+++ b/public/locales/en/watchlists.json
@@ -75,7 +75,8 @@
     "remove": "Remove",
     "edit": "Edit",
     "save": "Save",
-    "options": "Options"
+    "options": "Options",
+    "close": "Close"
   },
   "remove": {
     "title": "Are you sure?",
@@ -88,7 +89,8 @@
     "saving": "Saving..."
   },
   "list": {
-    "created": "Created"
+    "created": "Created",
+    "title": "My Watchlists"
   },
   "fields": {
     "name": "Name",
