feat: implement duplicate movie validation for watchlists
- Add UNIQUE constraint on watchlist_movies (watchlist_id, media_id, media_type)
- Clean existing duplicates before adding constraint
- Implement frontend validation to check for duplicates before insert
- Add fallback error handling for constraint violation (23505)
- Add translations for duplicate movie messages (EN/ES)
- Improve user experience with informative toast notifications

Resolves Task 35: Prevent users from adding same movie multiple times to watchlist

--- a/public/locales/en/watchlists.json
+++ b/public/locales/en/watchlists.json
@@ -62,7 +62,9 @@
     "addMovieError": "The list was created but couldn't add the movie/show.",
     "updateFavorites": "Could not update favorites",
     "updateWatched": "Could not update watched status",
-    "removeMovie": "Could not remove the movie"
+    "removeMovie": "Could not remove the movie",
+    "alreadyExists": "Already in list",
+    "alreadyExistsDescription": "This movie/show is already in the watchlist"
   },
   "delete": {
     "title": "Delete watchlist",
