feat: add random selection feature to watchlists
- Introduce RandomizerButton component for random item selection from watchlists
- Implement RandomSelectionModal to display selected random item
- Update English and Spanish localization files to include randomization texts
- Enhance WatchlistDetail component to integrate random selection functionality

Improves user engagement by allowing random selection of watchlist items

--- a/public/locales/en/watchlists.json
+++ b/public/locales/en/watchlists.json
@@ -97,5 +97,10 @@
   "fields": {
     "name": "Name",
     "description": "Description (optional)"
+  },
+  "randomizer": {
+    "random": "Random",
+    "selected": "Random Selection",
+    "selectedDescription": "You got: {{title}}"
   }
 }
