--- a/public/locales/es/watchlists.json
+++ b/public/locales/es/watchlists.json
@@ -97,5 +97,10 @@
   "fields": {
     "name": "Nombre",
     "description": "Descripción (opcional)"
+  },
+  "randomizer": {
+    "random": "Al Azar",
+    "selected": "Selección Aleatoria",
+    "selectedDescription": "Te tocó: {{title}}"
   }
 }
