feat: add localization for 'more lists' in watchlists
- Update English and Spanish localization files to include 'more lists' message
- Enhance user experience by providing additional context in watchlist UI

--- a/public/locales/en/watchlists.json
+++ b/public/locales/en/watchlists.json
@@ -12,7 +12,8 @@
     "empty": "No watchlists yet",
     "createFirst": "Create your first watchlist",
     "myWatchlists": "My Watchlists",
-    "sharedWatchlists": "Shared Watchlists"
+    "sharedWatchlists": "Shared Watchlists",
+    "moreLists": "more lists"
   },
   "detail": {
     "addMovie": "Add Movie",
