feat: add search button for empty watchlists
- Create EmptyWatchlistState component with search button
- Add navigation to search page when watchlist is empty
- Update translations for empty state in English and Spanish
- Replace simple empty text with engaging empty state component
- Include icon, title, description and call-to-action button
- Fix TypeScript any type error in WatchlistDetail

--- a/public/locales/en/watchlists.json
+++ b/public/locales/en/watchlists.json
@@ -19,6 +19,9 @@
     "addMovie": "Add Movie",
     "empty": "No movies in this watchlist",
     "addFirst": "Add your first movie",
+    "emptyTitle": "Your watchlist is empty",
+    "emptyDescription": "Start building your collection by adding movies and shows you want to watch.",
+    "searchMovies": "Search Movies & Shows",
     "collaborators": "Collaborators",
     "invite": "Invite",
     "settings": "Settings",
