--- a/public/locales/es/watchlists.json
+++ b/public/locales/es/watchlists.json
@@ -19,6 +19,9 @@
     "addMovie": "Agregar Película",
     "empty": "No hay películas en esta lista",
     "addFirst": "Agrega tu primera película",
+    "emptyTitle": "Tu lista está vacía",
+    "emptyDescription": "Comienza a construir tu colección agregando películas y series que quieras ver.",
+    "searchMovies": "Buscar Películas y Series",
     "collaborators": "Colaboradores",
     "invite": "Invitar",
     "settings": "Configuración",
