feat: add reusable back button for trailer view
- Create BackButton component in src/components/ui/back-button.tsx
- Add translations for 'back' button in English and Spanish
- Integrate BackButton in MediaCard and WatchlistMovieCard
- Show back button when trailer is displayed to return to movie details
- Use outline variant and small size for consistent UI
- Component is reusable across the entire application
- Fix TypeScript errors for genres property

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -33,7 +33,8 @@
     "leave": "Leave",
     "share": "Share",
     "copy": "Copy",
-    "close": "Close"
+    "close": "Close",
+    "back": "Back"
   },
   "common": {
     "loading": "Loading...",
