fix: correct back button translation key
- Move 'back' translation to common section for easier access
- Change BackButton component to use t('back') instead of t('buttons.back')
- Add translations in both English and Spanish
- Fix translation resolution issue

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -45,6 +45,7 @@
     "yes": "Yes",
     "no": "No",
     "close": "Close",
+    "back": "Back",
     "configurationError": "Configuration Error",
     "configurationErrorDescription": "Failed to load TMDb configuration. Some images may not display correctly.",
     "unknownError": "Unknown error"
