--- a/public/locales/en/watchlists.json
+++ b/public/locales/en/watchlists.json
@@ -18,6 +18,7 @@
   "detail": {
     "addMovie": "Add Movie",
     "empty": "No movies in this watchlist",
+    "createdBy": "Created by",
     "addFirst": "Add your first movie",
     "emptyTitle": "Your watchlist is empty",
     "emptyDescription": "Start building your collection by adding movies and shows you want to watch.",
