fix: move createdBy translation to common namespace
- Move 'createdBy' translation from watchlists to common namespace
- Update component to use tCommon('common.createdBy') instead of t('detail.createdBy')
- Remove duplicate translation keys from watchlists.json
- Ensure proper translation resolution in both Spanish and English
- Fix translation key display issue in UI

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -46,6 +46,7 @@
     "no": "No",
     "close": "Close",
     "back": "Back",
+    "createdBy": "Created by",
     "configurationError": "Configuration Error",
     "configurationErrorDescription": "Failed to load TMDb configuration. Some images may not display correctly.",
     "unknownError": "Unknown error"
